2012-11-07  Raphael Kubo da Costa  <raphael.kubo.da.costa@intel.com>

        [EFL] Gardening. Add or fix a few pixel expectations.

        * platform/efl/compositing/plugins/composited-plugin-expected.png:
        * platform/efl/compositing/repaint/composited-document-element-expected.png: Added.
        * platform/efl/fast/writing-mode/japanese-ruby-horizontal-bt-expected.png:
        * platform/efl/fast/writing-mode/japanese-ruby-horizontal-bt-expected.txt:
        * platform/efl/fast/writing-mode/japanese-ruby-vertical-lr-expected.png:
        * platform/efl/fast/writing-mode/japanese-ruby-vertical-lr-expected.txt:
        * platform/efl/fast/writing-mode/japanese-ruby-vertical-rl-expected.png:
        * platform/efl/fast/writing-mode/japanese-ruby-vertical-rl-expected.txt:
        * platform/efl/plugins/iframe-plugin-bgcolor-expected.png: Added.
        * platform/efl/plugins/mouse-click-plugin-clears-selection-expected.png: Added.
        * platform/efl/plugins/netscape-dom-access-expected.png: Added.

2012-11-07  Stephen White  <senorblanco@chromium.org>

        Now that it no longer produces image results, remove unnecessary
        PNGs for crash-hw-sw-switch.html.  Unreviewed.

        * platform/chromium-android/css3/filters/crash-hw-sw-switch-expected.png: Removed.
        * platform/chromium-linux/css3/filters/crash-hw-sw-switch-expected.png: Removed.
        * platform/chromium-mac-snowleopard/css3/filters/crash-hw-sw-switch-expected.png: Removed.
        * platform/chromium-mac/css3/filters/crash-hw-sw-switch-expected.png: Removed.
        * platform/chromium-win/css3/filters/crash-hw-sw-switch-expected.png: Removed.
        * platform/mac-snowleopard/css3/filters/crash-hw-sw-switch-expected.png: Removed.
        * platform/qt/css3/filters/crash-hw-sw-switch-expected.png: Removed.

2012-11-07  Grzegorz Czajkowski  <g.czajkowski@samsung.com>

        [EFL] WebKitTestRunner needs to turn on 'setContinuousSpellCheckingEnabled'